migration with priority

--- a/slurm/slurm.h.in
+++ b/slurm/slurm.h.in
@@ -1040,7 +1040,7 @@ enum ctx_keys {
 #define JOB_NTASKS_SET     0x00004000	/* --ntasks explicitly set */
 #define JOB_CPUS_SET       0x00008000	/* --cpus-per-tasks explicitly set */
 #define JOB_SALLOC_FLAG    0x00010000	/* For internal salloc/sbatch/srun use */
-#define MIGRATION_TEST     0x00020000	/* Backfill test in progress */
+#define MIGRATION_TEST     0x00020000	/* Migration test in progress */
 
 #define X11_FORWARD_ALL		0x0001	/* all nodes should setup forward */
 #define X11_FORWARD_BATCH	0x0002  /* only the batch node */
