--- a/src/plugins/sched/Makefile.am
+++ b/src/plugins/sched/Makefile.am
@@ -1,3 +1,3 @@
 # Makefile for scheduler plugins
 
-SUBDIRS = backfill builtin hold migration
+SUBDIRS = backfill builtin hold migration_compact migration_prio
